# noleAI

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.specify/: TASKS.md  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
adhd/: adhd-study-agent-design.md  adhd-study-agent-research.md  gemini-study-setup.md  investigation-summary.md
nole-core/: AGENTS.md  Cargo.toml
nole-core/src/: anti_pattern.rs  anti_patterns.rs  events.rs  knowledge_graph.rs  knowledge_graph_service.rs  lib.rs  overload.rs  prioritization.rs  security.rs  session_tracker.rs  socratic.rs  stress_test.rs  templates.rs  timer.rs  vault.rs  watcher.rs
nole-hud/: Cargo.toml  index.html
nole-hud/src/: commands.rs  lib.rs
nole-hud/src-tauri/: Cargo.toml  tauri.conf.json
nole-hud/src-tauri/src/: main.rs
nole-hud/src/commands/: knowledge_graph.rs  session.rs  stress_test.rs  timer.rs  vault.rs
notebooklm-rust-mcp/: Cargo.toml
notebooklm-rust-mcp/src/: client.rs  lib.rs  pdf.rs
specs/20260414-noleai-implementation/: plan.md  specification.md  tasks.md
the-crab-engram/: Cargo.toml
the-crab-engram/src/: fsrs.rs  lib.rs  models.rs  storage.rs
vault/: HOY.md  Progreso.md  Repaso.md
vault/Config/: Materias.md
