[workspace]
resolver = "2"
members = [
    "nole-core",
    "nole-hud",
    "the-crab-engram",
    "notebooklm-rust-mcp",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
