[package]
name = "nole-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
the-crab-engram = { path = "../the-crab-engram" }

[dev-dependencies]
tempfile = "3"
