[package]
name = "nole-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
