[package]
name = "nole-hud"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { workspace = true }
serde_json = { workspace = true }
nole-core = { path = "../nole-core" }
the-crab-engram = { path = "../the-crab-engram" }
tokio = { workspace = true }
async-channel = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
