[workspace]

[package]
name = "nole-hud"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nole-core = { path = "../nole-core" }
the-crab-engram = { path = "../the-crab-engram" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.74"
async-channel = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
