[package]
name = "notebooklm-rust-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pdf-extract = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }
