[package]
name = "the-crab-engram"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-channel = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
