[package]
name = "nole-hud"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nole-core = { path = "../../nole-core" }
the-crab-engram = { path = "../../the-crab-engram" }
notebooklm-rust-mcp = { path = "../../notebooklm-rust-mcp" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]